--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.note{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
