--- a/src/index.scss
+++ b/src/index.scss
@@ -12,8 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.note{
+.note {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  strong {
+    margin-right: 1rem;
+  }
 }
