--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,14 @@ code {
     margin-right: 1rem;
   }
 }
+.alert-enter {
+  opacity: 0;
+}
+.alert-enter-active {
+  transition: opacity 750ms ease-out;
+  opacity: 1;
+}
+.alert-exit-active {
+  transition: opacity 750ms ease-out;
+  opacity: 0;
+}
